docs: add optional OPENROUTER_API_KEY for smoke tests

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ OPENCLAW_AGENT_ROLE=worker
 QA_TOOLS_DEFAULT_MODEL=openai:gpt-4o
 QA_TOOLS_EVAL_MODEL=openai:gpt-4o
 
+# Optional: For smoke tests with API calls (qa-smoke-runner skill)
+# OPENROUTER_API_KEY=sk-or-...
+
 # Lake paths
 QA_TOOLS_LAKE_DIR=~/Src/qa-tools/qa-tools-core/lake
 QA_TOOLS_ARTIFACTS_DIR=~/Src/qa-tools/qa-tools-core/lake/artifacts
